removed unnecessary methods, got rid of hard code in tests
